# crab-pi

./: .gitignore  Cargo.toml  build.rs  memory.ld  prog.list  upload.sh  writeup.md   prog.list
cprogs/: .gitignore
cprogs/elf_test/: Makefile  TEST.ELF  link.ld  test.c  test.elf  test.list  user.ld
mac/: .gitignore  Cargo.toml
mac/src/: main.rs
pi/: Cargo.toml  armv6zk-none-eabihf.json  memory.ld  upload.sh
pi/.cargo/: config.toml
pi/cprogs/: .gitignore  busybox.alpine.elf  busybox_old.elf  link.ld
pi/src/: bit_utils.rs  ckalloc.rs  crc.rs  fast_hash.rs  gpio.rs  kmalloc.rs  main.rs  mem.rs  pmu_profiler.rs  profiler.rs  timer.rs  uart.rs
pi/utils/: convert_weights.py  matrix_test.py  test_tiny_model.py  train_tiny_model.py
src/: arch.rs  circular.rs  ckalloc.rs  gpio.rs  gpu.rs  kmalloc.rs  llvm_infra.rs  main.rs  matmul.rs  mem.rs  panic_infra.rs  pmu_profiler.rs  print.rs  profiler.rs  softmax.rs  start.rs  timer.rs  uart.rs  watchdog.rs
src/fat32/: emmc.rs  fs.rs  helpers.rs  mod.rs  sd.rs  utils.rs
src/gpt/: attention.rs  forward_layer.rs  forward_model.rs  gelu.rs  layernorm.rs  loader.rs  mod.rs  model.rs  ops.rs
src/gpu_kernels/: add_kernel.qasm  copy_example.qasm  deadbeef.qasm  dma_test.qasm  exp.qasm  exp_max.qasm  exp_max.qasm.tmp  mandelbrot.qasm  matmul_kernel.qasm  matmul_kernel_old.qasm  softmax.qasm  vc4.qinc
src/os/: elf_loader.rs  interrupts.rs  threads.rs  utils.rs  virtmem.rs
src/programs/: ckmalloc_test.rs  derive_jit.rs  imu.rs  (+8 more)
utils/: .gitignore  convert_weights.py  matrix_test.py  pyproject.toml  train_tiny_model.py
(+488 files in other folders)
