[package]
name = "crab-pi"
version = "0.1.0"
edition = "2024"

# Note: this exists to silence false positive errors when using an LSP or IDE
# `name` needs to be the same as `package.name`
[[bin]]
name = "crab-pi"
path = "src/main.rs"
test = false
doctest = false
bench = false

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
